--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "dotenv-cli": "^8.0.0",
     "eslint": "^8.52.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.1.10"
   },
   "dependencies": {
     "@hapi/hapi": "^21.3.2",
+    "auto-bind": "^4.0.0",
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.0",
     "joi": "^17.13.3",
     "nanoid": "^3.1.20",
